--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.1
   provider: ^6.1.2
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
