--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.1
   provider: ^6.1.2
   google_nav_bar: ^5.0.7
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
