--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   google_nav_bar: ^5.0.7
   intl: ^0.20.2
+  timeago: ^3.2.2
 
 dev_dependencies:
   flutter_test:
