--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_nav_bar: ^5.0.7
   intl: ^0.20.2
   timeago: ^3.2.2
+  emoji_regex: ^0.0.5
 
 dev_dependencies:
   flutter_test:
